<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content" android:layout_height="wrap_content"
    android:elevation="3dp"
    android:background="@color/colorPrimaryDark"
    app:layout_behavior="android.support.design.widget.BottomSheetBehavior"
    android:fillViewport="true"
    android:scrollbars = "vertical"
    android:scrollbarStyle="insideInset">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView2"
            android:text="@string/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_mirror1"
            android:drawablePadding="20dp"
            android:padding="20dp"
            android:textSize="24sp"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"
            android:fontFamily="serif" />



        <TextView
            android:id="@+id/text_content"
            android:text="@string/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorWhite"
            android:fontFamily="serif"
            android:paddingTop="30dp" />
        <TextView
            android:id="@+id/text_content2"
            android:text="@string/app_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorWhite"
            android:fontFamily="serif" />
        <TextView
            android:id="@+id/text_content3"
            android:text="@string/app_developer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorWhite"
            android:fontFamily="serif" />
        <TextView
            android:id="@+id/text_content4"
            android:text="@string/acknowledgments"
            android:paddingTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorWhite"
            android:fontFamily="serif" />
        <TextView
            android:id="@+id/text_content5"
            android:text="@string/ack_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorWhite"
            android:fontFamily="serif" />
    </LinearLayout>
</ScrollView>