<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@drawable/side_nav_bar"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingStart="@dimen/activity_horizontal_margin"
    android:paddingEnd="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">


        <TableRow android:layout_width="match_parent">
           <!-- app:srcCompat="@android:drawable/sym_def_app_icon" -->
            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="30dp"
                android:layout_column="0"
                app:srcCompat="@mipmap/ic_mirror"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/textView2"
                android:text="@string/app_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:padding="20dp"

                android:textSize="24sp"
                android:fontFamily="serif"
                android:textStyle="normal|bold" />
        </TableRow>
        <TableRow android:layout_width="match_parent">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_version"
                android:layout_column="0"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_marginStart="30dp"
                android:layout_gravity="bottom"
                android:text="@string/app_developer"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>
        </TableRow>




</TableLayout>
